@@ -11,6 +11,6 @@ add_executable(TCPServer TCPserver.c)
 add_executable(TCPClient TCPclient.c)
 add_executable(UDPServer UDPserver.c)
 add_executable(UDPClient UDPclient.c)
-add_executable(IPServer IPserver.c)
-add_executable(IPClient IPclient.c)
+#add_executable(IPServer IPserver.c) deleted
+#add_executable(IPClient IPclient.c) deleted
 add_executable(IPRAW_UDPclient IPRAW_UDPclient.c)
