@@ -57,49 +57,7 @@ include CMakeFiles/IPClient.dir/progress.make
 # Include the compile flags for this target's objects.
 include CMakeFiles/IPClient.dir/flags.make
 
-CMakeFiles/IPClient.dir/IPclient.c.o: CMakeFiles/IPClient.dir/flags.make
-CMakeFiles/IPClient.dir/IPclient.c.o: ../IPclient.c
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --green --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=$(CMAKE_PROGRESS_1) "Building C object CMakeFiles/IPClient.dir/IPclient.c.o"
-	/usr/bin/cc  $(C_DEFINES) $(C_INCLUDES) $(C_FLAGS) -o CMakeFiles/IPClient.dir/IPclient.c.o   -c /home/zhanan/computerNet/IPclient.c
-
-CMakeFiles/IPClient.dir/IPclient.c.i: cmake_force
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --green "Preprocessing C source to CMakeFiles/IPClient.dir/IPclient.c.i"
-	/usr/bin/cc  $(C_DEFINES) $(C_INCLUDES) $(C_FLAGS) -E /home/zhanan/computerNet/IPclient.c > CMakeFiles/IPClient.dir/IPclient.c.i
-
-CMakeFiles/IPClient.dir/IPclient.c.s: cmake_force
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --green "Compiling C source to assembly CMakeFiles/IPClient.dir/IPclient.c.s"
-	/usr/bin/cc  $(C_DEFINES) $(C_INCLUDES) $(C_FLAGS) -S /home/zhanan/computerNet/IPclient.c -o CMakeFiles/IPClient.dir/IPclient.c.s
-
-CMakeFiles/IPClient.dir/IPclient.c.o.requires:
-
-.PHONY : CMakeFiles/IPClient.dir/IPclient.c.o.requires
-
-CMakeFiles/IPClient.dir/IPclient.c.o.provides: CMakeFiles/IPClient.dir/IPclient.c.o.requires
-	$(MAKE) -f CMakeFiles/IPClient.dir/build.make CMakeFiles/IPClient.dir/IPclient.c.o.provides.build
-.PHONY : CMakeFiles/IPClient.dir/IPclient.c.o.provides
-
-CMakeFiles/IPClient.dir/IPclient.c.o.provides.build: CMakeFiles/IPClient.dir/IPclient.c.o
-
-
-# Object files for target IPClient
-IPClient_OBJECTS = \
-"CMakeFiles/IPClient.dir/IPclient.c.o"
-
-# External object files for target IPClient
-IPClient_EXTERNAL_OBJECTS =
-
-IPClient: CMakeFiles/IPClient.dir/IPclient.c.o
-IPClient: CMakeFiles/IPClient.dir/build.make
-IPClient: CMakeFiles/IPClient.dir/link.txt
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --green --bold --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=$(CMAKE_PROGRESS_2) "Linking C executable IPClient"
-	$(CMAKE_COMMAND) -E cmake_link_script CMakeFiles/IPClient.dir/link.txt --verbose=$(VERBOSE)
-
-# Rule to build all files generated by this target.
-CMakeFiles/IPClient.dir/build: IPClient
-
-.PHONY : CMakeFiles/IPClient.dir/build
-
-CMakeFiles/IPClient.dir/requires: CMakeFiles/IPClient.dir/IPclient.c.o.requires
+CMakeFiles/IPClient.dir/requires:
 
 .PHONY : CMakeFiles/IPClient.dir/requires
 
