@@ -1,10 +1,5 @@
-file(REMOVE_RECURSE
-  "CMakeFiles/IPClient.dir/IPclient.c.o"
-  "IPClient.pdb"
-  "IPClient"
-)
 
 # Per-language clean rules from dependency scanning.
-foreach(lang C)
+foreach(lang )
   include(CMakeFiles/IPClient.dir/cmake_clean_${lang}.cmake OPTIONAL)
 endforeach()
