@@ -1,10 +1,3 @@
 # CMAKE generated file: DO NOT EDIT!
 # Generated by "Unix Makefiles" Generator, CMake Version 3.5
 
-# compile C with /usr/bin/cc
-C_FLAGS =  
-
-C_DEFINES = 
-
-C_INCLUDES = 
-
