@@ -1,3 +1,1 @@
-CMAKE_PROGRESS_1 = 1
-CMAKE_PROGRESS_2 = 2
 
