@@ -1,3 +1,3 @@
-CMAKE_PROGRESS_1 = 3
-CMAKE_PROGRESS_2 = 4
+CMAKE_PROGRESS_1 = 1
+CMAKE_PROGRESS_2 = 2
 
