@@ -57,49 +57,7 @@ include CMakeFiles/IPServer.dir/progress.make
 # Include the compile flags for this target's objects.
 include CMakeFiles/IPServer.dir/flags.make
 
-CMakeFiles/IPServer.dir/IPserver.c.o: CMakeFiles/IPServer.dir/flags.make
-CMakeFiles/IPServer.dir/IPserver.c.o: ../IPserver.c
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --green --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=$(CMAKE_PROGRESS_1) "Building C object CMakeFiles/IPServer.dir/IPserver.c.o"
-	/usr/bin/cc  $(C_DEFINES) $(C_INCLUDES) $(C_FLAGS) -o CMakeFiles/IPServer.dir/IPserver.c.o   -c /home/zhanan/computerNet/IPserver.c
-
-CMakeFiles/IPServer.dir/IPserver.c.i: cmake_force
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --green "Preprocessing C source to CMakeFiles/IPServer.dir/IPserver.c.i"
-	/usr/bin/cc  $(C_DEFINES) $(C_INCLUDES) $(C_FLAGS) -E /home/zhanan/computerNet/IPserver.c > CMakeFiles/IPServer.dir/IPserver.c.i
-
-CMakeFiles/IPServer.dir/IPserver.c.s: cmake_force
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --green "Compiling C source to assembly CMakeFiles/IPServer.dir/IPserver.c.s"
-	/usr/bin/cc  $(C_DEFINES) $(C_INCLUDES) $(C_FLAGS) -S /home/zhanan/computerNet/IPserver.c -o CMakeFiles/IPServer.dir/IPserver.c.s
-
-CMakeFiles/IPServer.dir/IPserver.c.o.requires:
-
-.PHONY : CMakeFiles/IPServer.dir/IPserver.c.o.requires
-
-CMakeFiles/IPServer.dir/IPserver.c.o.provides: CMakeFiles/IPServer.dir/IPserver.c.o.requires
-	$(MAKE) -f CMakeFiles/IPServer.dir/build.make CMakeFiles/IPServer.dir/IPserver.c.o.provides.build
-.PHONY : CMakeFiles/IPServer.dir/IPserver.c.o.provides
-
-CMakeFiles/IPServer.dir/IPserver.c.o.provides.build: CMakeFiles/IPServer.dir/IPserver.c.o
-
-
-# Object files for target IPServer
-IPServer_OBJECTS = \
-"CMakeFiles/IPServer.dir/IPserver.c.o"
-
-# External object files for target IPServer
-IPServer_EXTERNAL_OBJECTS =
-
-IPServer: CMakeFiles/IPServer.dir/IPserver.c.o
-IPServer: CMakeFiles/IPServer.dir/build.make
-IPServer: CMakeFiles/IPServer.dir/link.txt
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --green --bold --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=$(CMAKE_PROGRESS_2) "Linking C executable IPServer"
-	$(CMAKE_COMMAND) -E cmake_link_script CMakeFiles/IPServer.dir/link.txt --verbose=$(VERBOSE)
-
-# Rule to build all files generated by this target.
-CMakeFiles/IPServer.dir/build: IPServer
-
-.PHONY : CMakeFiles/IPServer.dir/build
-
-CMakeFiles/IPServer.dir/requires: CMakeFiles/IPServer.dir/IPserver.c.o.requires
+CMakeFiles/IPServer.dir/requires:
 
 .PHONY : CMakeFiles/IPServer.dir/requires
 
