@@ -1,10 +1,5 @@
-file(REMOVE_RECURSE
-  "CMakeFiles/IPServer.dir/IPserver.c.o"
-  "IPServer.pdb"
-  "IPServer"
-)
 
 # Per-language clean rules from dependency scanning.
-foreach(lang C)
+foreach(lang )
   include(CMakeFiles/IPServer.dir/cmake_clean_${lang}.cmake OPTIONAL)
 endforeach()
