@@ -60,50 +60,13 @@ CMAKE_SOURCE_DIR = /home/zhanan/computerNet
 CMAKE_BINARY_DIR = /home/zhanan/computerNet/build
 
 #=============================================================================
-# Target rules for target CMakeFiles/IPClient.dir
-
-# All Build rule for target.
-CMakeFiles/IPClient.dir/all:
-	$(MAKE) -f CMakeFiles/IPClient.dir/build.make CMakeFiles/IPClient.dir/depend
-	$(MAKE) -f CMakeFiles/IPClient.dir/build.make CMakeFiles/IPClient.dir/build
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=1,2 "Built target IPClient"
-.PHONY : CMakeFiles/IPClient.dir/all
-
-# Include target in all.
-all: CMakeFiles/IPClient.dir/all
-
-.PHONY : all
-
-# Build rule for subdir invocation for target.
-CMakeFiles/IPClient.dir/rule: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/zhanan/computerNet/build/CMakeFiles 2
-	$(MAKE) -f CMakeFiles/Makefile2 CMakeFiles/IPClient.dir/all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/zhanan/computerNet/build/CMakeFiles 0
-.PHONY : CMakeFiles/IPClient.dir/rule
-
-# Convenience name for target.
-IPClient: CMakeFiles/IPClient.dir/rule
-
-.PHONY : IPClient
-
-# clean rule for target.
-CMakeFiles/IPClient.dir/clean:
-	$(MAKE) -f CMakeFiles/IPClient.dir/build.make CMakeFiles/IPClient.dir/clean
-.PHONY : CMakeFiles/IPClient.dir/clean
-
-# clean rule for target.
-clean: CMakeFiles/IPClient.dir/clean
-
-.PHONY : clean
-
-#=============================================================================
 # Target rules for target CMakeFiles/IPRAW_UDPclient.dir
 
 # All Build rule for target.
 CMakeFiles/IPRAW_UDPclient.dir/all:
 	$(MAKE) -f CMakeFiles/IPRAW_UDPclient.dir/build.make CMakeFiles/IPRAW_UDPclient.dir/depend
 	$(MAKE) -f CMakeFiles/IPRAW_UDPclient.dir/build.make CMakeFiles/IPRAW_UDPclient.dir/build
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=3,4 "Built target IPRAW_UDPclient"
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=1,2 "Built target IPRAW_UDPclient"
 .PHONY : CMakeFiles/IPRAW_UDPclient.dir/all
 
 # Include target in all.
@@ -134,50 +97,13 @@ clean: CMakeFiles/IPRAW_UDPclient.dir/clean
 .PHONY : clean
 
 #=============================================================================
-# Target rules for target CMakeFiles/IPServer.dir
-
-# All Build rule for target.
-CMakeFiles/IPServer.dir/all:
-	$(MAKE) -f CMakeFiles/IPServer.dir/build.make CMakeFiles/IPServer.dir/depend
-	$(MAKE) -f CMakeFiles/IPServer.dir/build.make CMakeFiles/IPServer.dir/build
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=5,6 "Built target IPServer"
-.PHONY : CMakeFiles/IPServer.dir/all
-
-# Include target in all.
-all: CMakeFiles/IPServer.dir/all
-
-.PHONY : all
-
-# Build rule for subdir invocation for target.
-CMakeFiles/IPServer.dir/rule: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/zhanan/computerNet/build/CMakeFiles 2
-	$(MAKE) -f CMakeFiles/Makefile2 CMakeFiles/IPServer.dir/all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/zhanan/computerNet/build/CMakeFiles 0
-.PHONY : CMakeFiles/IPServer.dir/rule
-
-# Convenience name for target.
-IPServer: CMakeFiles/IPServer.dir/rule
-
-.PHONY : IPServer
-
-# clean rule for target.
-CMakeFiles/IPServer.dir/clean:
-	$(MAKE) -f CMakeFiles/IPServer.dir/build.make CMakeFiles/IPServer.dir/clean
-.PHONY : CMakeFiles/IPServer.dir/clean
-
-# clean rule for target.
-clean: CMakeFiles/IPServer.dir/clean
-
-.PHONY : clean
-
-#=============================================================================
 # Target rules for target CMakeFiles/TCPServer.dir
 
 # All Build rule for target.
 CMakeFiles/TCPServer.dir/all:
 	$(MAKE) -f CMakeFiles/TCPServer.dir/build.make CMakeFiles/TCPServer.dir/depend
 	$(MAKE) -f CMakeFiles/TCPServer.dir/build.make CMakeFiles/TCPServer.dir/build
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=9,10 "Built target TCPServer"
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=5,6 "Built target TCPServer"
 .PHONY : CMakeFiles/TCPServer.dir/all
 
 # Include target in all.
@@ -214,7 +140,7 @@ clean: CMakeFiles/TCPServer.dir/clean
 CMakeFiles/TCPClient.dir/all:
 	$(MAKE) -f CMakeFiles/TCPClient.dir/build.make CMakeFiles/TCPClient.dir/depend
 	$(MAKE) -f CMakeFiles/TCPClient.dir/build.make CMakeFiles/TCPClient.dir/build
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=7,8 "Built target TCPClient"
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=3,4 "Built target TCPClient"
 .PHONY : CMakeFiles/TCPClient.dir/all
 
 # Include target in all.
@@ -251,7 +177,7 @@ clean: CMakeFiles/TCPClient.dir/clean
 CMakeFiles/UDPServer.dir/all:
 	$(MAKE) -f CMakeFiles/UDPServer.dir/build.make CMakeFiles/UDPServer.dir/depend
 	$(MAKE) -f CMakeFiles/UDPServer.dir/build.make CMakeFiles/UDPServer.dir/build
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=13,14 "Built target UDPServer"
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=9,10 "Built target UDPServer"
 .PHONY : CMakeFiles/UDPServer.dir/all
 
 # Include target in all.
@@ -288,7 +214,7 @@ clean: CMakeFiles/UDPServer.dir/clean
 CMakeFiles/UDPClient.dir/all:
 	$(MAKE) -f CMakeFiles/UDPClient.dir/build.make CMakeFiles/UDPClient.dir/depend
 	$(MAKE) -f CMakeFiles/UDPClient.dir/build.make CMakeFiles/UDPClient.dir/build
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=11,12 "Built target UDPClient"
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --progress-dir=/home/zhanan/computerNet/build/CMakeFiles --progress-num=7,8 "Built target UDPClient"
 .PHONY : CMakeFiles/UDPClient.dir/all
 
 # Include target in all.
