@@ -1,3 +1,3 @@
-CMAKE_PROGRESS_1 = 9
-CMAKE_PROGRESS_2 = 10
+CMAKE_PROGRESS_1 = 5
+CMAKE_PROGRESS_2 = 6
 
