@@ -1,3 +1,3 @@
-CMAKE_PROGRESS_1 = 11
-CMAKE_PROGRESS_2 = 12
+CMAKE_PROGRESS_1 = 7
+CMAKE_PROGRESS_2 = 8
 
