@@ -1,3 +1,3 @@
-CMAKE_PROGRESS_1 = 13
-CMAKE_PROGRESS_2 = 14
+CMAKE_PROGRESS_1 = 9
+CMAKE_PROGRESS_2 = 10
 
